--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -15,7 +15,29 @@ body {
 }
 
 .wrapper h2 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Lato;
   color: white;
   
+}
+
+.col{
+  width: 50vw;
+}
+
+.tagline h1{
+  font-size: 98px;
+  font-family: 'Lato', sans-serif;
+  color: white;
+}
+
+.tagline h3{
+  font-size: 32px;
+  font-family: 'Lato', sans-serif;
+  color: #dbd8d5;
+}
+
+#ipadExample{
+  height: auto;
+  width: 52vw;
+  margin-right: 0;
 }
