--- a/views/root.ejs
+++ b/views/root.ejs
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="/styles/home.css">
+  <link rel="stylesheet" type="text/css" href="/styles/config.css">
 </head>
   <body>
     <div class="wrapper">    
       <img src="/images/scorebot-logo.png"/>
       <br/>
-      <h2> Rule the office</h2>
-      <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'><img alt="Add to Slack" height="40" width="139" src="/images/add_to_slack.png"></a>
+      <div class="grid">
+        <div class="col tagline"> 
+          <h1> Rule the office</h1>
+          <h3> Make everyday conversation a competition. </h3>
+          <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'><img alt="Add to Slack" height="40" width="139" src="/images/add_to_slack.png"></a>
+        </div>
+        <div class="col">
+         <img id="ipadExample" src="/images/ipad-example.png"/>
+        </div>
+      <div>
+      </div>
+      
+      
     </div>
   </body>
 </html>
