--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -20,14 +20,21 @@ body {
   
 }
 
-.col{
-  width: 50vw;
+.col.tagline{
+  width: 60vw;
+ 
+}
+
+.col {
+  width: 40vw;
+  
 }
 
 .tagline h1{
   font-size: 98px;
   font-family: 'Lato', sans-serif;
   color: white;
+  margin: 0;
 }
 
 .tagline h3{
@@ -36,8 +43,32 @@ body {
   color: #dbd8d5;
 }
 
+.tagline-wrapper {
+  width: 85%;
+  text-align: left;
+  margin: 0 auto;
+}
+
+.tagline-wrapper img {
+ padding: 0; 
+}
+
 #ipadExample{
   height: auto;
-  width: 52vw;
+  width: 100%;
   margin-right: 0;
+}
+
+@media screen and (max-width: 700px){
+  .tagline h1{
+    font-size: 10vw;
+    margin: 0;
+  }
+
+  .col.tagline{
+    width: 100%;
+   text-align: center;
+   padding: 40px 0;
+  }
+
 }
