methods for deleting bot msgs- need special scope

--- a/views/root.ejs
+++ b/views/root.ejs
@@ -21,7 +21,9 @@
           <div class="tagline-wrapper">
             <h1> RULE THE OFFICE</h1>
             <h3> Make everyday conversation a competition. </h3>
-            <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'><img id="addToSlack" alt="Add to Slack" src="/images/add_to_slack.png"></a>
+            <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'>
+              <img id="addToSlack" alt="Add to Slack" src="/images/add_to_slack.png">
+            </a>
           </div>
         </div>
         <div class="col">
@@ -32,7 +34,9 @@
       <div class="grid grid-gif -rtl">
         <div class="col col-text -ltr">
           <h3>Scorebot is the quantifier of social status for your team. He keeps track of all the most reactive people.</h3>
-          <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'><img id="addToSlack" alt="Add to Slack" src="/images/add_to_slack.png"></a>
+          <a href='https://slack.com/oauth/authorize?client_id=<%= process.env.SLACK_ID %>&redirect_uri=<%= process.env.SLACK_REDIRECT %>new&scope=bot,commands'>
+            <img id="addToSlack" alt="Add to Slack" src="/images/add_to_slack.png">
+          </a>
         </div>
         <div class="col col-gif">
           <img id="gifExample" src="/images/gif-example.png" />
